[gd_scene load_steps=4 format=3 uid="uid://cpjill0rn3tqs"]

[ext_resource type="Script" path="res://scripts/guiscripts/credit_screen.gd" id="1_gy8pd"]
[ext_resource type="Texture2D" uid="uid://dkp3y17tt4tg2" path="res://assets/overlays/credits.png" id="1_l5565"]
[ext_resource type="Theme" uid="uid://chrmqqoajoemb" path="res://assets/misc/main.tres" id="3_6n28a"]

[node name="CreditScreen" type="CanvasLayer"]
script = ExtResource("1_gy8pd")

[node name="CreditImage" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l5565")

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.5
offset_top = -131.0
offset_right = 30.5
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_6n28a")
text = "Return"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_exited" from="ReturnButton" to="." method="_on_cancel_button_focus_exited"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_cancel_button_pressed"]
